@@ -7463,3 +7463,6 @@ EPRINTS-3.1-rc-1
 2008-06-04 tdb
  * Fixed views not working for name-type metafields, fixing #3380
 
+2008-06-04 cjg
+ * Fixed bug which meant only first attachment to an email actually
+    got attached.
